RESOLVED FIXED64162
[skia] don't rely on lockPixels failure to detect gpu-backed device (in prep for skia roll)
https://bugs.webkit.org/show_bug.cgi?id=64162
Summary [skia] don't rely on lockPixels failure to detect gpu-backed device (in prep ...
Mike Reed
Reported 2011-07-08 05:39:19 PDT
[skia] don't rely on lockPixels failure to detect gpu-backed device (in prep for skia roll)
Attachments
Patch (1.50 KB, patch)
2011-07-08 05:40 PDT, Mike Reed
no flags
Mike Reed
Comment 1 2011-07-08 05:40:37 PDT
Brian Salomon
Comment 2 2011-07-08 05:44:56 PDT
(Unofficial) LGTM.
Stephen White
Comment 3 2011-07-08 10:16:52 PDT
Comment on attachment 100109 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=100109&action=review > Source/WebCore/platform/graphics/skia/ImageBufferSkia.cpp:304 > + bool temporaryBitmap = !!deviceBitmap.getTexture(); Will this code work with the current rev of skia? If not, you'll have to wrap it temporarily in an #ifdef that you turn on in Chrome (ie., two-sided change), then remove it after the skia roll.
Mike Reed
Comment 4 2011-07-08 10:36:57 PDT
this does work with the current rev. of skia. It is being done so that we can perform a new rev. later on.
Stephen White
Comment 5 2011-07-08 10:44:06 PDT
Ok, great. r=me
WebKit Review Bot
Comment 6 2011-07-08 11:13:59 PDT
Comment on attachment 100109 [details] Patch Clearing flags on attachment: 100109 Committed r90645: <http://trac.webkit.org/changeset/90645>
WebKit Review Bot
Comment 7 2011-07-08 11:14:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.