[skia] don't rely on lockPixels failure to detect gpu-backed device (in prep for skia roll) https://bugs.webkit.org/show_bug.cgi?id=64162

Patch by Mike Reed <reed@google.com> on 2011-07-08
Reviewed by Stephen White.

No new tests. preparing for skia roll, where lockPixels always succeeds (but slowly for gpu-backed)

* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::putImageData):

Canonical link: https://commits.webkit.org/79910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90645 268f45cc-cd09-0410-ab3c-d52691b4dbfc